# open-with-dialog

./: .gitignore  CMakeLists.txt  README.md  commandlinemanager.h  desktopfile.cpp  desktopfile.h  fileutils.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mimesappsmanager.cpp  mimesappsmanager.h  open-with-dialog.pc.in  singleton.h  打开方式对话框项目说明.doc
debian/: changelog  control  copyright  libopen-with-dialog.install  open-with-dialog.install
src/: CMakeLists.txt
src/Headers/: commandlinemanager.h  desktopfile.h  fileutils.h
src/Sources/: commandlinemanager.cpp  fileutils.cpp  main.cpp  mainwindow.cpp  mimesappsmanager.cpp
